Added examples for comparison between theoretic from_sde method and estimation of linear operator via regression

--- a/code/notebooks/First draft signature models.ipynb
+++ b/code/notebooks/First draft signature models.ipynb
@@ -54,21 +54,21 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# === Parameters === #\n",
-    "T = 0.5         # Time horizon (1 year)\n",
-    "N = 1095         # Number of time steps (daily)\n",
-    "dt = T / N      # Time step\n",
+    "T = 0.5  # Time horizon (1 year)\n",
+    "N = 1095  # Number of time steps (daily)\n",
+    "dt = T / N  # Time step\n",
     "t = np.linspace(0, T, N)\n",
     "\n",
-    "S0 = 1        # Initial stock price\n",
-    "r = 0.0         # Risk-free rate\n",
+    "S0 = 1  # Initial stock price\n",
+    "r = 0.0  # Risk-free rate\n",
     "sigma_bs = 0.2  # Constant volatility for Black-Scholes\n",
     "\n",
     "# Heston model parameters\n",
-    "v0 = 0.08       # Initial variance\n",
-    "kappa = 0.5     # Mean reversion speed\n",
-    "theta = 0.15    # Long-term variance\n",
-    "xi = 0.25        # Volatility of volatility\n",
-    "rho = -0.5      # Correlation between asset and volatility\n",
+    "v0 = 0.08  # Initial variance\n",
+    "kappa = 0.5  # Mean reversion speed\n",
+    "theta = 0.15  # Long-term variance\n",
+    "xi = 0.25  # Volatility of volatility\n",
+    "rho = -0.5  # Correlation between asset and volatility\n",
     "\n",
     "# === Simulate paths === #\n",
     "np.random.seed(42)\n",
@@ -79,7 +79,9 @@
     "S_bs = np.zeros(N)\n",
     "S_bs[0] = S0\n",
     "for i in range(1, N):\n",
-    "    S_bs[i] = S_bs[i-1] * np.exp((r - 0.5 * sigma_bs**2) * dt + sigma_bs * np.sqrt(dt) * Z1[i])\n",
+    "    S_bs[i] = S_bs[i - 1] * np.exp(\n",
+    "        (r - 0.5 * sigma_bs**2) * dt + sigma_bs * np.sqrt(dt) * Z1[i]\n",
+    "    )\n",
     "\n",
     "# Heston path\n",
     "S_heston = np.zeros(N)\n",
@@ -89,29 +91,36 @@
     "\n",
     "for i in range(1, N):\n",
     "    # Ensure variance stays positive (Full Truncation Euler)\n",
-    "    v_heston[i] = np.abs(v_heston[i-1] + kappa*(theta - v_heston[i-1])*dt + xi*np.sqrt(v_heston[i-1])*np.sqrt(dt)*Z2[i])\n",
-    "    S_heston[i] = S_heston[i-1] * np.exp((r - 0.5 * v_heston[i-1])*dt + np.sqrt(v_heston[i-1])*np.sqrt(dt)*Z1[i])\n",
+    "    v_heston[i] = np.abs(\n",
+    "        v_heston[i - 1]\n",
+    "        + kappa * (theta - v_heston[i - 1]) * dt\n",
+    "        + xi * np.sqrt(v_heston[i - 1]) * np.sqrt(dt) * Z2[i]\n",
+    "    )\n",
+    "    S_heston[i] = S_heston[i - 1] * np.exp(\n",
+    "        (r - 0.5 * v_heston[i - 1]) * dt\n",
+    "        + np.sqrt(v_heston[i - 1]) * np.sqrt(dt) * Z1[i]\n",
+    "    )\n",
     "\n",
     "# === Plot results === #\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "plt.subplot(2, 1, 1)\n",
-    "plt.plot(t, S_bs, label='Black-Scholes')\n",
-    "plt.plot(t, S_heston, label='Heston', linestyle='--')\n",
-    "plt.title('Simulated Asset Price Paths')\n",
-    "plt.ylabel('Asset Price')\n",
+    "plt.plot(t, S_bs, label=\"Black-Scholes\")\n",
+    "plt.plot(t, S_heston, label=\"Heston\", linestyle=\"--\")\n",
+    "plt.title(\"Simulated Asset Price Paths\")\n",
+    "plt.ylabel(\"Asset Price\")\n",
     "plt.legend()\n",
     "\n",
     "plt.subplot(2, 1, 2)\n",
-    "plt.plot(t, np.full(N, sigma_bs**2), label='BS Variance')\n",
-    "plt.plot(t, v_heston, label='Heston Variance', linestyle='--')\n",
-    "plt.title('Variance Process')\n",
-    "plt.ylabel('Variance')\n",
-    "plt.xlabel('Time')\n",
+    "plt.plot(t, np.full(N, sigma_bs**2), label=\"BS Variance\")\n",
+    "plt.plot(t, v_heston, label=\"Heston Variance\", linestyle=\"--\")\n",
+    "plt.title(\"Variance Process\")\n",
+    "plt.ylabel(\"Variance\")\n",
+    "plt.xlabel(\"Time\")\n",
     "plt.legend()\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -161,9 +170,12 @@
    "source": [
     "import numpy as np\n",
     "import esig.tosig as ts\n",
+    "\n",
     "np.random.seed(0)\n",
-    "two_dim_stream = np.random.random(size=(10,2)) #create a 2D path, sequence of 10 points in 2D space\n",
-    "sig= ts.stream2sig(two_dim_stream, 2) #compute the path signature up to level 2"
+    "two_dim_stream = np.random.random(\n",
+    "    size=(10, 2)\n",
+    ")  # create a 2D path, sequence of 10 points in 2D space\n",
+    "sig = ts.stream2sig(two_dim_stream, 2)  # compute the path signature up to level 2"
    ]
   },
   {
@@ -190,7 +202,7 @@
     "plt.figure(figsize=(12, 4))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.plot(two_dim_stream[:, 0], two_dim_stream[:, 1], marker='o')\n",
+    "plt.plot(two_dim_stream[:, 0], two_dim_stream[:, 1], marker=\"o\")\n",
     "plt.title(\"2D Path\")\n",
     "plt.xlabel(\"x\")\n",
     "plt.ylabel(\"y\")\n",
@@ -233,9 +245,10 @@
    "source": [
     "import numpy as np\n",
     "import esig.tosig as ts\n",
-    "X_1 = np.array([1., 3., 5., 8.]).reshape((-1,1))\n",
-    "X_2 = np.array([1., 4., 2., 6.]).reshape((-1,1))\n",
-    "two_dim_stream = np.append(X_1,X_2, axis=1)\n",
+    "\n",
+    "X_1 = np.array([1.0, 3.0, 5.0, 8.0]).reshape((-1, 1))\n",
+    "X_2 = np.array([1.0, 4.0, 2.0, 6.0]).reshape((-1, 1))\n",
+    "two_dim_stream = np.append(X_1, X_2, axis=1)\n",
     "signatures = ts.stream2sig(two_dim_stream, 3)\n",
     "print(signatures)"
    ]
@@ -315,9 +328,9 @@
     "end = datetime.datetime(2023, 1, 1)\n",
     "\n",
     "# S&P 500 index data symbol on FRED is 'SP500'\n",
-    "data = web.DataReader('SP500', 'fred', start, end)\n",
+    "data = web.DataReader(\"SP500\", \"fred\", start, end)\n",
     "\n",
-    "print(data.head())\n"
+    "print(data.head())"
    ]
   },
   {
@@ -330,11 +343,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "prices = data['SP500'].dropna()\n",
+    "prices = data[\"SP500\"].dropna()\n",
     "log_returns = np.log(prices).diff().dropna()\n",
     "window = 20  # e.g. 20 trading days ~ 1 month\n",
     "\n",
-    "realized_vol = log_returns.rolling(window=window).std().dropna()\n"
+    "realized_vol = log_returns.rolling(window=window).std().dropna()"
    ]
   },
   {
@@ -363,7 +376,7 @@
     "print(f\"realized_vol length: {len(realized_vol)}\")\n",
     "\n",
     "print(log_returns.index[:5])\n",
-    "print(realized_vol.index[:5])\n"
+    "print(realized_vol.index[:5])"
    ]
   },
   {
@@ -396,17 +409,19 @@
     "for i in range(window, len(common_dates)):\n",
     "    # Extract window of returns using loc by date, based on position i\n",
     "    date = common_dates[i]\n",
-    "    window_dates = common_dates[i - window:i]\n",
+    "    window_dates = common_dates[i - window : i]\n",
     "\n",
     "    returns_window = log_returns_aligned.loc[window_dates].values\n",
-    "    returns_window = (returns_window - returns_window.mean()) / returns_window.std()  # normalize\n",
-    "    squared_returns = returns_window ** 2\n",
+    "    returns_window = (\n",
+    "        returns_window - returns_window.mean()\n",
+    "    ) / returns_window.std()  # normalize\n",
+    "    squared_returns = returns_window**2\n",
     "    time_axis = np.linspace(0, 1, window)\n",
-    "    \n",
+    "\n",
     "    path = np.column_stack((time_axis, returns_window, squared_returns))\n",
     "    sig = iisignature.sig(path, depth)\n",
     "    X.append(sig)\n",
-    "    \n",
+    "\n",
     "    y.append(realized_vol_aligned.loc[date])\n",
     "\n",
     "X = np.array(X)\n",
@@ -451,7 +466,9 @@
     "y_scaled = scaler_y.fit_transform(y.reshape(-1, 1)).flatten()\n",
     "\n",
     "# === Train-test split ===\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y_scaled, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_scaled, y_scaled, test_size=0.2, random_state=42\n",
+    ")\n",
     "\n",
     "# === Ridge regression with cross-validated alpha ===\n",
     "alphas = np.logspace(-3, 3, 30)\n",
@@ -468,7 +485,7 @@
     "r2 = r2_score(y_test_orig, y_pred)\n",
     "\n",
     "print(f\"RMSE: {rmse:.6f}\")\n",
-    "print(f\"R2: {r2:.6f}\")\n"
+    "print(f\"R2: {r2:.6f}\")"
    ]
   },
   {
@@ -492,14 +509,14 @@
    ],
    "source": [
     "# === Step 6: Plot results and print metrics ===\n",
-    "plt.figure(figsize=(12,6))\n",
-    "plt.plot(y_test_orig, label='Realized Volatility')\n",
-    "plt.plot(y_pred, label='Predicted Volatility (Signature Model)')\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.plot(y_test_orig, label=\"Realized Volatility\")\n",
+    "plt.plot(y_pred, label=\"Predicted Volatility (Signature Model)\")\n",
     "plt.legend()\n",
-    "plt.title('Volatility Prediction Using Path Signatures')\n",
-    "plt.xlabel('Test Samples (time order)')\n",
-    "plt.ylabel('Volatility')\n",
-    "plt.show()\n"
+    "plt.title(\"Volatility Prediction Using Path Signatures\")\n",
+    "plt.xlabel(\"Test Samples (time order)\")\n",
+    "plt.ylabel(\"Volatility\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -634,7 +651,7 @@
     "valid_indices = []\n",
     "\n",
     "for i in range(window, len(price)):\n",
-    "    path_segment = np.array(price[i - window:i]).reshape(-1, 1)\n",
+    "    path_segment = np.array(price[i - window : i]).reshape(-1, 1)\n",
     "    sig = iisig.sig(path_segment, depth)\n",
     "    signatures.append(sig)\n",
     "    valid_indices.append(i)  # keep track of the time index\n",
@@ -644,7 +661,7 @@
     "# Align y (drop NaNs, and use matching indices)\n",
     "vol_realized = vol_realized.iloc[valid_indices].dropna()\n",
     "# Match X to y\n",
-    "X = X[-len(vol_realized):]\n",
+    "X = X[-len(vol_realized) :]\n",
     "y = vol_realized.values\n",
     "\n",
     "print(f\"Shapes: X={X.shape}, y={y.shape}\")\n",
@@ -674,7 +691,7 @@
     "r2 = r2_score(y, y_pred)\n",
     "\n",
     "print(f\"RMSE: {rmse:.6f}\")\n",
-    "print(f\"R2: {r2:.6f}\")\n"
+    "print(f\"R2: {r2:.6f}\")"
    ]
   },
   {
@@ -732,14 +749,14 @@
     "# Download S&P500 daily data\n",
     "# -----------------------\n",
     "start = datetime.datetime(2022, 1, 1)\n",
-    "end   = datetime.datetime(2024, 1, 1)\n",
+    "end = datetime.datetime(2024, 1, 1)\n",
     "\n",
-    "data = web.DataReader('SP500', 'fred', start, end)\n",
+    "data = web.DataReader(\"SP500\", \"fred\", start, end)\n",
     "data = data.dropna()\n",
-    "data.columns = ['SP500']\n",
+    "data.columns = [\"SP500\"]\n",
     "print(data.head())\n",
     "\n",
-    "price = data['SP500'].values\n",
+    "price = data[\"SP500\"].values\n",
     "dates = data.index\n",
     "\n",
     "# -----------------------\n",
@@ -750,35 +767,40 @@
     "window_realized = 20\n",
     "vol_realized = pd.Series(returns**2).rolling(window_realized).mean()\n",
     "\n",
+    "\n",
     "# Black–Scholes call price function\n",
     "def bs_call_price(S, K, T, r, sigma):\n",
-    "    d1 = (np.log(S/K) + (r + 0.5*sigma**2)*T) / (sigma*np.sqrt(T))\n",
-    "    d2 = d1 - sigma*np.sqrt(T)\n",
-    "    return S*norm.cdf(d1) - K*np.exp(-r*T)*norm.cdf(d2)\n",
+    "    d1 = (np.log(S / K) + (r + 0.5 * sigma**2) * T) / (sigma * np.sqrt(T))\n",
+    "    d2 = d1 - sigma * np.sqrt(T)\n",
+    "    return S * norm.cdf(d1) - K * np.exp(-r * T) * norm.cdf(d2)\n",
+    "\n",
     "\n",
     "# Parameters (example)\n",
-    "r = 0.01       # risk-free rate\n",
+    "r = 0.01  # risk-free rate\n",
     "K = np.mean(price)  # at-the-money\n",
-    "T_maturity = 0.50   # 6 months\n",
+    "T_maturity = 0.50  # 6 months\n",
     "sigma_base = 0.2\n",
     "\n",
     "# Generate synthetic option prices\n",
     "C = bs_call_price(price, K, T_maturity, r, sigma_base)\n",
     "\n",
+    "\n",
     "# Compute synthetic implied vols (they’ll be close to sigma_base)\n",
     "def implied_volatility(C, S, K, T, r):\n",
     "    sigma = 0.2\n",
     "    for _ in range(50):\n",
-    "        d1 = (np.log(S/K) + (r + 0.5*sigma**2)*T) / (sigma*np.sqrt(T))\n",
-    "        d2 = d1 - sigma*np.sqrt(T)\n",
-    "        price = S*norm.cdf(d1) - K*np.exp(-r*T)*norm.cdf(d2)\n",
+    "        d1 = (np.log(S / K) + (r + 0.5 * sigma**2) * T) / (sigma * np.sqrt(T))\n",
+    "        d2 = d1 - sigma * np.sqrt(T)\n",
+    "        price = S * norm.cdf(d1) - K * np.exp(-r * T) * norm.cdf(d2)\n",
     "        vega = S * norm.pdf(d1) * np.sqrt(T)\n",
     "        sigma -= (price - C) / max(vega, 1e-6)\n",
     "        sigma = max(sigma, 1e-6)\n",
     "    return sigma\n",
     "\n",
-    "vol_bs = np.array([implied_volatility(c, s, K, T_maturity, r)\n",
-    "                   for c, s in zip(C, price)])\n",
+    "\n",
+    "vol_bs = np.array(\n",
+    "    [implied_volatility(c, s, K, T_maturity, r) for c, s in zip(C, price)]\n",
+    ")\n",
     "depth = 3\n",
     "sig_dim = iisig.siglength(1, depth)\n",
     "window_sig = 50\n",
@@ -787,7 +809,7 @@
     "indices = []\n",
     "\n",
     "for i in range(window_sig, len(price)):\n",
-    "    path_segment = np.array(price[i - window_sig:i]).reshape(-1, 1)\n",
+    "    path_segment = np.array(price[i - window_sig : i]).reshape(-1, 1)\n",
     "    sig = iisig.sig(path_segment, depth)\n",
     "    signatures.append(sig)\n",
     "    indices.append(i)\n",
@@ -796,10 +818,10 @@
     "\n",
     "# Align volatility series\n",
     "vol_realized = vol_realized.iloc[indices].dropna()\n",
-    "vol_bs_aligned = vol_bs[indices[-len(vol_realized):]]\n",
+    "vol_bs_aligned = vol_bs[indices[-len(vol_realized) :]]\n",
     "\n",
     "# Trim signatures to match y length\n",
-    "X_sig = X_sig[-len(vol_realized):]\n",
+    "X_sig = X_sig[-len(vol_realized) :]\n",
     "y = vol_realized.values\n",
     "\n",
     "# Combine features: signatures + Black–Scholes vol\n",
@@ -898,15 +920,15 @@
     "# 1. Download S&P500 daily data\n",
     "# ---------------------------------------------------------\n",
     "start = datetime.datetime(2023, 1, 1)\n",
-    "end   = datetime.datetime(2025, 1, 1)\n",
+    "end = datetime.datetime(2025, 1, 1)\n",
     "\n",
-    "data = web.DataReader('SP500', 'fred', start, end)\n",
+    "data = web.DataReader(\"SP500\", \"fred\", start, end)\n",
     "data = data.dropna()\n",
-    "data.columns = ['SP500']\n",
+    "data.columns = [\"SP500\"]\n",
     "print(\"Downloaded data from\", start.date(), \"to\", end.date())\n",
     "print(data.head())\n",
     "\n",
-    "price = data['SP500'].values\n",
+    "price = data[\"SP500\"].values\n",
     "dates = data.index\n",
     "\n",
     "# ---------------------------------------------------------\n",
@@ -925,7 +947,7 @@
     "\n",
     "# Estimate baseline volatility level from returns\n",
     "sigma_empirical = np.std(returns)\n",
-    "scale_factor = 0.5   # controls how strong the Brownian component is\n",
+    "scale_factor = 0.5  # controls how strong the Brownian component is\n",
     "\n",
     "# Scale volatility to local market activity\n",
     "vol_bm = pd.Series(np.abs(returns)).rolling(20).std().fillna(0).values\n",
@@ -941,7 +963,7 @@
     "indices = []\n",
     "\n",
     "for i in range(window_sig, len(price)):\n",
-    "    path_segment = np.array(price[i - window_sig:i]).reshape(-1, 1)\n",
+    "    path_segment = np.array(price[i - window_sig : i]).reshape(-1, 1)\n",
     "    sig = iisig.sig(path_segment, depth)\n",
     "    signatures.append(sig)\n",
     "    indices.append(i)\n",
@@ -952,9 +974,9 @@
     "# 5. Align data lengths\n",
     "# ---------------------------------------------------------\n",
     "vol_realized = vol_realized.iloc[indices].dropna()\n",
-    "vol_bm_aligned = vol_bm[indices[-len(vol_realized):]]\n",
+    "vol_bm_aligned = vol_bm[indices[-len(vol_realized) :]]\n",
     "\n",
-    "X_sig = X_sig[-len(vol_realized):]\n",
+    "X_sig = X_sig[-len(vol_realized) :]\n",
     "y = vol_realized.values\n",
     "\n",
     "# ---------------------------------------------------------\n",
